--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,8 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
+
+*.csv
+translations/
+.DS_Store
+.github
