Added test data to git repo

--- a/.gitignore
+++ b/.gitignore
@@ -176,6 +176,5 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/python
 
 *.csv
-translations/
 .DS_Store
-.github
+.github/
