add synthetic dataset creation (#10)
* dataset initital clean up from notion

* add more annotation

* Update dataset.csv

* add generating logic

* update dataset format

* korrekturen dataset

* beispielgroups

* add sorting logic

* correct dataset and change to presence

* sort corrected dataset

* more sorting

* sorting korrekturen

* entfernen ?

* nochmal korrekturen

* fehlender kasus

* add all statistics that we currently have

* get all jobs and according statistics

* organize

* delete duplicates

* add groups

* changes to dataset and add status

* Update groups.py

* Update groups.py

sry :(

* syntax error

* zeug

* Add all Jobs (#1)

* changes to dataset and add status

* add job titles

* add Nils Jobs

* add all jobs

* fix dative

* fix dataset

* fix group stuff

* add names, new sentences, fix some bugs

* add neutral names

* clean dataset and add correct numbers for branches

* fix erroneous line break

* implement adjectives logic

* bugfixes, ensure gender is never the same

* add support for romantic relationships

* add romantic sentences and make x always have pronoun

* formatting groups

* add grouping to groups

* add neutral job titles

* Update groups_new.py

bis 513 arrays

* fix weird merge problem & add groups_new for grouping

* add style 4 sentences

* Update groups_new.py

bis vor 331 und alles unter 292

* Update groups_new.py

finished 292-633

* Update groups_new.py

111 - 291

* add grouping (#8)

* Dataset creation (#6)

* Update groups_new.py

bis vor 331 und alles unter 292

* Update groups_new.py

finished 292-633

* add grouping (#8)

---------

Co-authored-by: androgruen <113352620+androgruen@users.noreply.github.com>
Co-authored-by: michellekappl <50708550+michellekappl@users.noreply.github.com>

* finish stuff

* correct groups, add example output

* paar bugfixes

* cleanup

* final fixes

* little fixes, more names

* Update dataset.csv

line 85: y = polizei

* dataset correction

* dataset corrections

* fixes

--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,8 @@ pyrightconfig.json
 *.csv
 .DS_Store
 .github/
+
+# Dataset specific ignores
+create_deval_synth/sorted_dataset.csv
+create_deval_synth/__pycache__/*
+create_deval_synth/__pycache__/*.pyc
