Remove GCP service account key from repo

--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+automized_translations/.env
+automized_translations/xtut-translator-*.json
 
 # Spyder project settings
 .spyderproject
