--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
+.idea
+.editorconfig
+install-pyenv-win.ps1
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
